--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="ui three item inverted menu">
-        <a href="/students"class="item">Home</a>
-        <a class="item">Add</a>
-        <a class="item">Misc</a>
+        <a href="/students"class="item"><i class="home icon"></i>Home</a>
+        <a href="/students/new" class="item"><i class="add icon"></i>Add</a>
+        <a class="item"><i class="file pdf  icon"></i>Assignments</a>
     </div>
