--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,5 +11,5 @@
     <div class="ui three item inverted menu">
         <a href="/students"class="item"><i class="home icon"></i>Home</a>
         <a href="/students/new" class="item"><i class="add icon"></i>Add</a>
-        <a class="item"><i class="file pdf  icon"></i>Assignments</a>
+        <a href="/assignments" class="item"><i class="file pdf  icon"></i>Assignments</a>
     </div>
