--- a/views/assignments_index.ejs
+++ b/views/assignments_index.ejs
@@ -1,5 +1,26 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Assignments</h1>
+    <a href="/assignments/new" class="ui primary button"><i class="add icon"></i>Create Assignment</a>
+    <table class="ui blue celled table">
+        <thead>
+            <tr>
+                <th>Assignment</th>
+                <th>Points</th>
+                <th>Released</th>
+                <th>Due</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% docs.forEach((doc) => { %>
+            <tr>
+                <td data-label="assign-name"><%= doc.name %></td>
+                <td data-label="assign-points"><%= doc.points %></td>
+                <td data-label="assign-released"><%= doc.released %></td>
+                <td data-label="assign-due"><%= doc.due %></td>
+            </tr>
+            <% }) %>
+        </tbody>
+    </table>
 </div>
 <%- include("./partials/footer.ejs") %>
