--- a/views/assignments_new.ejs
+++ b/views/assignments_new.ejs
@@ -1,5 +1,26 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">New Assignment</h1>
+    <form class="ui form" action="/assignments" method="POST">
+        <div class="fields">
+          <div class="field">
+            <label>Name</label>
+            <input type="text" placeholder="Assignment Name" name="doc[name]" required>
+          </div>
+          <div class="field">
+            <label>Points</label>
+            <input type="text" placeholder="Points" name="doc[points]" required>
+          </div>
+        </div>
+        <div class="field">
+            <label>Released</label>
+            <input type="text" placeholder="Release Date" name="doc[release]" required>
+        </div>
+        <div class="field">
+            <label>Due</label>
+            <input type="text" placeholder="Due Date" name="doc[due]" required>
+        </div>
+        <input type="submit" value="Submit" class="ui primary button">
+    </form>
 </div>
 <%- include("./partials/footer.ejs") %>
