Add CREATE/POST logic

--- a/views/assignments_new.ejs
+++ b/views/assignments_new.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="field">
             <label>Released</label>
-            <input type="text" placeholder="Release Date" name="doc[release]" required>
+            <input type="text" placeholder="Release Date" name="doc[released]" required>
         </div>
         <div class="field">
             <label>Due</label>
