--- a/views/assignments_show.ejs
+++ b/views/assignments_show.ejs
@@ -1,5 +1,11 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Show Assignments</h1>
+    <h1 class="ui header">Assignment Info</h1>
+    <div class="ui segment">
+        <h2><i class="file alternate icon"></i><%= doc.name %></h2>
+        <p><i class="chart bar icon"></i><%= doc.points %> points</p>
+        <p><i class="lock open icon"></i>Released on <%= doc.released %></p>
+        <p><i class="lock closed icon"></i>Due on <%= doc.due %></p>
+    </div>
 </div>
 <%- include("./partials/footer.ejs") %>
