Update main menu add text and page headings

--- a/views/assignments_show.ejs
+++ b/views/assignments_show.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Assignment Info</h1>
+    <h1 class="ui header">Assignment Information</h1>
     <div class="ui segment">
         <h2><i class="file alternate icon"></i><%= doc.name %></h2>
         <p><i class="chart bar icon"></i><%= doc.points %> points</p>
