--- a/views/students_index.ejs
+++ b/views/students_index.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Enrolled</h1>
+    <h1 class="ui header">Enrolled Students</h1>
     
     <div class="ui grid cards">
         <% people.forEach((person) => { %>
