--- a/views/students_show.ejs
+++ b/views/students_show.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Information</h1>
+    <h1 class="ui header">Student Information</h1>
     <div class="ui segment">
         <h2><i class="user icon"></i><%= `${person.first} ${person.last}` %></h2>
         <p><i class="envelope icon"></i><%= person.email %></p>
