--- a/views/students_new.ejs
+++ b/views/students_new.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Add</h1>
+    <h1 class="ui header">New Student</h1>
     <form class="ui form" action="/students" method="POST">
         <div class="fields">
           <div class="field">
