--- a/views/assignments/edit.ejs
+++ b/views/assignments/edit.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Edit Assignment</h1>
     <form action="/assignments/<%= doc._id %>?_method=PUT" method="POST" class="ui form">
@@ -23,4 +23,4 @@
         <input type="submit" value="Submit" class="ui primary button">
     </form>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
