--- a/views/assignments/index.ejs
+++ b/views/assignments/index.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Assignments</h1>
     <a href="/assignments/new" class="ui primary button"><i class="add icon"></i>Create Assignment</a>
@@ -23,4 +23,4 @@
         </tbody>
     </table>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
