--- a/views/assignments/new.ejs
+++ b/views/assignments/new.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">New Assignment</h1>
     <form class="ui form" action="/assignments" method="POST">
@@ -23,4 +23,4 @@
         <input type="submit" value="Submit" class="ui primary button">
     </form>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
