--- a/views/assignments/show.ejs
+++ b/views/assignments/show.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Assignment Information</h1>
     <div class="ui segment">
@@ -12,4 +12,4 @@
         </form>
     </div>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
