Separate persons ejs templates into distinct views directory

--- a/views/persons/new.ejs
+++ b/views/persons/new.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">New Student</h1>
     <form class="ui form" action="/students" method="POST">
@@ -31,4 +31,4 @@
         <input type="submit" value="Submit" class="ui primary button">
     </form>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
