--- a/views/persons/show.ejs
+++ b/views/persons/show.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Student Information</h1>
     <div class="ui segment">
@@ -13,4 +13,4 @@
         </form>
     </div>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
