--- a/views/persons/edit.ejs
+++ b/views/persons/edit.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Edit</h1>
     <form action="/students/<%= person._id %>?_method=PUT" method="POST" class="ui form">
@@ -31,4 +31,4 @@
         <input type="submit" value="Submit" class="ui primary button">
     </form>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
