--- a/views/persons/index.ejs
+++ b/views/persons/index.ejs
@@ -1,4 +1,4 @@
-<%- include("./partials/header.ejs") %>
+<%- include("../partials/header.ejs") %>
 <div class="ui container">
     <h1 class="ui header">Enrolled Students</h1>
     
@@ -15,4 +15,4 @@
         <% }) %>
     </div>
 </div>
-<%- include("./partials/footer.ejs") %>
+<%- include("../partials/footer.ejs") %>
