Update Person model and supporting templates to include img url

--- a/views/persons/edit.ejs
+++ b/views/persons/edit.ejs
@@ -13,6 +13,10 @@
           </div>
         </div>
         <div class="field">
+          <label>Avatar</label>
+          <input type="text" placeholder="Image URL" value="<%= person.img %>" name="person[img]" required>
+        </div>
+        <div class="field">
             <label>Email</label>
             <input type="email" placeholder="Email" value="<%= person.email %>" name="person[email]" required>
         </div>
