--- a/views/persons/index.ejs
+++ b/views/persons/index.ejs
@@ -6,7 +6,7 @@
         <% people.forEach((person) => { %>
         <div class="card">
             <div class="content">
-                <img class="right floated ui image rounded" src="https://images.pexels.com/photos/2078265/pexels-photo-2078265.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                <img class="right floated ui image rounded" src="<%=person.img%>">
                 <div class="header"><%= `${person.first} ${person.last}` %></div>
                 <div class="description"><%= person.bio.substring(0, 50)%>...</div>
             </div>
