--- a/views/persons/new.ejs
+++ b/views/persons/new.ejs
@@ -13,6 +13,10 @@
           </div>
         </div>
         <div class="field">
+          <label>Avatar</label>
+          <input type="text" placeholder="Image URL" name="person[img]" required>
+        </div>
+        <div class="field">
             <label>Email</label>
             <input type="email" placeholder="Email" name="person[email]" required>
         </div>
