--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <title>Class Gradebook</title>
 </head>
 <body>
     <div class="ui three item inverted menu">
-        <a href="/students"class="item"><i class="home icon"></i>Home</a>
-        <a href="/students/new" class="item"><i class="add icon"></i>Add Student</a>
+        <a href="/"class="item"><i class="home icon"></i>Home</a>
+        <a href="/students" class="item"><i class="address book icon"></i>Directory</a>
         <a href="/assignments" class="item"><i class="file pdf  icon"></i>Assignments</a>
     </div>
