--- a/views/persons/show.ejs
+++ b/views/persons/show.ejs
@@ -8,8 +8,8 @@
         <p><i class="tag icon"></i><%= person.studentId %></p>
         <p><i class="book icon"></i><%= person.major %></p>
         <p><i class="smile icon"></i><%= person.bio %></p>
-        <a href="/students/<%= person._id %>/edit" class="ui blue basic button">Edit</a>
-        <form id="delete" action="/students/<%= person._id%>?_method=DELETE" method="POST" style="display: inline;">
+        <form action="/students/<%= person._id%>?_method=DELETE" method="POST">
+            <a href="/students/<%= person._id %>/edit" class="ui blue basic button">Edit</a>
             <input type="submit" value="Drop" class="ui red basic button">
         </form>
     </div>
