--- a/views/persons/edit.ejs
+++ b/views/persons/edit.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Edit</h1>
+    <h1 class="ui header">Edit Student Information</h1>
     <hr>
     <form action="/students/<%= person._id %>?_method=PUT" method="POST" class="ui form">
         <div class="fields">
