--- a/views/persons/edit.ejs
+++ b/views/persons/edit.ejs
@@ -33,7 +33,8 @@
             <label>Short Bio</label>
             <textarea rows="2" name="person[bio]"><%= person.bio %></textarea>
         </div>
-        <input type="submit" value="Submit" class="ui primary button">
+        <input type="submit" value="Save" class="ui green button">
+        <a href="/students/<%=person._id%>" class="ui red button">Cancel</a> 
     </form>
 </div>
 <%- include("../partials/footer.ejs") %>
