--- a/views/assignments/edit.ejs
+++ b/views/assignments/edit.ejs
@@ -21,7 +21,8 @@
             <label>Due</label>
             <input type="text" placeholder="Due Date" value="<%= doc.due %>" name="doc[due]" required>
         </div>
-        <input type="submit" value="Submit" class="ui primary button">
+        <input type="submit" value="Save" class="ui green button">
+        <a href="/assignments/<%=doc._id%>" class="ui red button">Cancel</a> 
     </form>
 </div>
 <%- include("../partials/footer.ejs") %>
