--- a/views/persons/index.ejs
+++ b/views/persons/index.ejs
@@ -7,7 +7,7 @@
         <% people.forEach((person) => { %>
         <div class="card">
             <div class="content">
-                <div class="header"><%= `${person.first} ${person.last}` %></div>
+                <div class="header"><i class="user icon"></i><%= `${person.first} ${person.last}` %></div>
                 <div class="description"><%= person.bio.substring(0, 50)%>...</div>
             </div>
             <a class="ui bottom teal attached button" href="/students/<%= person._id%>"><i class="eye icon"></i>view</a>
