Update Student enroll form with Enroll and Cancel buttons

--- a/views/persons/new.ejs
+++ b/views/persons/new.ejs
@@ -33,7 +33,8 @@
             <label>Short Bio</label>
             <textarea rows="2" name="person[bio]"></textarea>
         </div>
-        <input type="submit" value="Submit" class="ui primary button">
+        <input type="submit" value="Enroll" class="ui green button">
+        <a href="/students" class="ui red button">Cancel</a> 
     </form>
 </div>
 <%- include("../partials/footer.ejs") %>
