--- a/views/assignments/new.ejs
+++ b/views/assignments/new.ejs
@@ -21,7 +21,8 @@
             <label>Due</label>
             <input type="text" placeholder="Due Date" name="doc[due]" required>
         </div>
-        <input type="submit" value="Submit" class="ui primary button">
+        <input type="submit" value="Create" class="ui green button">
+        <a href="/assignments" class="ui red button">Cancel</a> 
     </form>
 </div>
 <%- include("../partials/footer.ejs") %>
