Change header partial menu

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,10 @@
     <title>Class Gradebook</title>
 </head>
 <body>
-    <div class="ui three item inverted menu">
-        <a href="/"class="item"><i class="home icon"></i>Home</a>
-        <a href="/students" class="item"><i class="address book icon"></i>Directory</a>
-        <a href="/assignments" class="item"><i class="file pdf  icon"></i>Assignments</a>
+    <div class="ui stackable inverted menu">
+        <div class="ui container">
+            <a href="/"class="item"><i class="home icon"></i>Home</a>
+            <a href="/students" class="item"><i class="address book icon"></i>Directory</a>
+            <a href="/assignments" class="item"><i class="file paper icon"></i>Assignments</a>
+        </div>
     </div>
