Add icons to assignments table headings

--- a/views/assignments/index.ejs
+++ b/views/assignments/index.ejs
@@ -6,10 +6,10 @@
     <table class="ui blue celled table">
         <thead>
             <tr>
-                <th>Assignment</th>
-                <th>Points</th>
-                <th>Released</th>
-                <th>Due</th>
+                <th><i class="file alternate icon"></i>Assignment</th>
+                <th><i class="chart bar icon"></i>Points</th>
+                <th><i class="lock open icon"></i>Released</th>
+                <th><i class="lock closed icon"></i>Due</th>
             </tr>
         </thead>
         <tbody>
