Fix header assignments icon class

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,6 @@
         <div class="ui container">
             <a href="/"class="item"><i class="home icon"></i>Home</a>
             <a href="/students" class="item"><i class="address book icon"></i>Directory</a>
-            <a href="/assignments" class="item"><i class="file paper icon"></i>Assignments</a>
+            <a href="/assignments" class="item"><i class="file alternate icon"></i>Assignments</a>
         </div>
     </div>
