Update course links icon

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,13 +28,13 @@
         </div>
         <div class="ui segments">
             <div class="ui segment">
-                <a href="/students">Student Directory <i class="linkify icon"></i></a>
+                <a href="/students">Student Directory <i class="arrow alternate circle right icon"></i></a>
             </div>
             <div class="ui segment">
-                <a href="/assignments">View Assignments <i class="linkify icon"></i></a>
+                <a href="/assignments">View Assignments <i class="arrow alternate circle right icon"></i></a>
             </div>
             <div class="ui segment">
-                <a href="#">About the Instructor <i class="linkify icon"></i></a>
+                <a href="#">About the Instructor <i class="arrow alternate circle right icon"></i></a>
             </div>
         </div>
     </div>
