Fix released typo

--- a/views/assignments/edit.ejs
+++ b/views/assignments/edit.ejs
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="field">
-            <label>Release</label>
+            <label>Released</label>
             <input type="text" placeholder="Release Date" value="<%= doc.released %>" name="doc[released]" required>
         </div>
         <div class="field">
