Update register/login ui message

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,7 +44,7 @@
                 </div>
                 <input type="submit" value="Register" class="ui fluid large teal submit button">
               </div>
-              <div class="ui error message"></div>
+              <div class="ui message">Already registered? <a href="/login">Login into your account</a></div>
             </form>
         </div>
     </div>
