--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 </div>
                 <input type="submit" value="Login" class="ui fluid large teal submit button">
               </div>
-              <div class="ui error message"></div>
+              <div class="ui message">Not registered? <a href="/register">Create an account</a></div>
             </form>
         </div>
     </div>
