--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/header.ejs") %>
 <div class="ui container">
     <div class="ui segment black segment">
-        <h1><i class="graduation hat icon"></i> Welcome to Computer Science 101</h1>
+        <h1><i class="graduation hat icon"></i> Welcome <%=currentUser.first%> <%=currentUser.last%>!</h1>
     </div>
     <div class="ui segments red segment">
         <div class="ui segment">
@@ -24,17 +24,17 @@
     </div>
     <div class="ui segments green segment">
         <div class="ui segment">
-            <h2><i class="question icon"></i> Course Links</h2>
+            <h2><i class="question icon"></i> Learnvas Links</h2>
         </div>
         <div class="ui segments">
             <div class="ui segment">
                 <a href="/students">Student Directory <i class="arrow alternate circle right icon"></i></a>
             </div>
             <div class="ui segment">
-                <a href="/assignments">View Assignments <i class="arrow alternate circle right icon"></i></a>
+                <a href="/courses">All Courses <i class="arrow alternate circle right icon"></i></a>
             </div>
             <div class="ui segment">
-                <a href="#">About the Instructor <i class="arrow alternate circle right icon"></i></a>
+                <a href="/students/<%=currentUser._id%>">Your Profile <i class="arrow alternate circle right icon"></i></a>
             </div>
         </div>
     </div>
