--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -12,7 +12,7 @@
                     </div>
                     <div class="content">
                     <h4 class="ui header">Course Objectives</h4>
-                    <div class="description"><%=course.description.substring(0, 50)%><a href="#"> Read More...</a>
+                    <div class="description"><%=course.description.substring(0, 50)%>. <a href="/courses/<%=course._id%>"> Read More...</a>
                     </div>
                     </div>
                     <div class="extra content">
