--- a/views/assignments/index.ejs
+++ b/views/assignments/index.ejs
@@ -1,8 +1,7 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Assignments</h1>
+    <h1 class="ui header"><%=courseId%> Assignments</h1>
     <hr>
-    <a href="/assignments/new" class="ui primary button"><i class="add icon"></i>Create Assignment</a>
     <table class="ui blue celled table">
         <thead>
             <tr>
@@ -15,7 +14,7 @@
         <tbody>
             <% docs.forEach((doc) => { %>
             <tr>
-                <td data-label="assign-name"><a href="/assignments/<%=doc._id%>"><%= doc.name %></a></td>
+                <td data-label="assign-name"><a href="/courses/<%=courseId%>/assignments/<%=doc._id%>"><%= doc.name %></a></td>
                 <td data-label="assign-points"><%= doc.points %></td>
                 <td data-label="assign-released"><%= doc.released %></td>
                 <td data-label="assign-due"><%= doc.due %></td>
