--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -6,32 +6,32 @@
         <div class="fields">
           <div class="field">
             <label>First name</label>
-            <input type="text" placeholder="First Name" name="person[first]" required>
+            <input type="text" placeholder="First Name" name="student[first]" required>
           </div>
           <div class="field">
             <label>Last name</label>
-            <input type="text" placeholder="Last Name" name="person[last]" required>
+            <input type="text" placeholder="Last Name" name="student[last]" required>
           </div>
         </div>
         <div class="field">
           <label>Avatar</label>
-          <input type="text" placeholder="Image URL" name="person[img]" required>
+          <input type="text" placeholder="Image URL" name="student[img]" required>
         </div>
         <div class="field">
             <label>Email</label>
-            <input type="email" placeholder="Email" name="person[email]" required>
+            <input type="email" placeholder="Email" name="student[email]" required>
         </div>
         <div class="field">
             <label>Major</label>
-            <input type="text" placeholder="Major" name="person[major]" required>
+            <input type="text" placeholder="Major" name="student[major]" required>
         </div>
         <div class="field">
           <label>Student ID</label>
-          <input type="text" placeholder="Student ID" name="person[studentId]" minlength="7" maxlength="7" required>
+          <input type="text" placeholder="Student ID" name="student[studentId]" minlength="7" maxlength="7" required>
       </div>
         <div class="field">
             <label>Short Bio</label>
-            <textarea rows="2" name="person[bio]"></textarea>
+            <textarea rows="2" name="student[bio]"></textarea>
         </div>
         <input type="submit" value="Enroll" class="ui green button">
         <a href="/students" class="ui red button">Cancel</a> 
