Update student forms

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,10 +19,7 @@
                   <input type="email" name="email" placeholder="Email" required>
                 </div>
                 <div class="field">
-                  <input type="text" name="studentId" placeholder="Student ID" minlength="7" maxlength="7" required>
-                </div>
-                <div class="field">
-                  <input type="text" name="major" placeholder="Major" required>
+                  <input type="text" name="major" placeholder="Major">
                 </div>
                 <div class="field">
                   <div class="ui left icon input">
