--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -15,7 +15,7 @@
         </div>
         <div class="field">
           <label>Avatar</label>
-          <input type="text" placeholder="Image URL" name="student[img]" required>
+          <input type="text" placeholder="Image URL" name="student[img]">
         </div>
         <div class="field">
             <label>Email</label>
@@ -23,12 +23,8 @@
         </div>
         <div class="field">
             <label>Major</label>
-            <input type="text" placeholder="Major" name="student[major]" required>
+            <input type="text" placeholder="Major" name="student[major]">
         </div>
-        <div class="field">
-          <label>Student ID</label>
-          <input type="text" placeholder="Student ID" name="student[studentId]" minlength="7" maxlength="7" required>
-      </div>
         <div class="field">
             <label>Short Bio</label>
             <textarea rows="2" name="student[bio]"></textarea>
