--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -16,7 +16,9 @@
                     </div>
                     </div>
                     <div class="extra content">
-                      <button class="ui blue fluid button">Enroll Now</button>
+                        <form action="/courses/<%=course._id%>" method="POST">
+                            <input type="submit" value="Enroll Now" class="ui blue fluid button">
+                        </form>
                     </div>
                 </div>
             <% }) %> 
