--- a/views/courses/show.ejs
+++ b/views/courses/show.ejs
@@ -8,9 +8,9 @@
                 <h2><i class="<%=course.icon%> icon"></i><%= course.name %></h2>
                 <p><i class="user icon"></i>Taught by <%= course.instructor %></p>
                 <p><i class="question icon"></i>Course Objectives: <%= course.description %></p>
-                <form>
+                <form action="/courses/<%=course._id%>" method="POST">
                     <a href="/courses/<%=course._id%>/assignments" class="ui green basic button">View Assignments</a>
-                    <input type="submit" value="Enroll Now" class="ui primary basic button">
+                    <input type="submit" value="Enroll Now" class="ui blue basic button">
                 </form>
             </div>
         </div>
