Implement enrollment feature

--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -16,7 +16,7 @@
                     </div>
                     </div>
                     <div class="extra content">
-                        <form action="/courses/<%=course._id%>" method="POST">
+                        <form action="/courses/<%=course._id%>/enroll/<%=currentUser._id%>" method="POST">
                             <input type="submit" value="Enroll Now" class="ui blue fluid button">
                         </form>
                     </div>
