--- a/views/assignments/index.ejs
+++ b/views/assignments/index.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header"><%=courseId%> Assignments</h1>
+    <h1 class="ui header"><%= courseName %> Assignments</h1>
     <hr>
     <table class="ui blue celled table">
         <thead>
