Add major select to register form

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,16 @@
                   <input type="email" name="email" placeholder="Email" required>
                 </div>
                 <div class="field">
-                  <input type="text" name="major" placeholder="Major">
+                  <select class="ui dropdown">
+                    <option value="">Your major</option>
+                    <option value="CS">Computer Science</option>
+                    <option value="CSE">Computer Science & Engineering</option>
+                    <option value="CE">Computer Engineering</option>
+                    <option value="ELE">Electrical Engineering</option>
+                    <option value="SE">Software Engineering</option>
+                    <option value="CGS">Computer Game Science</option>
+                    <option value="INF">Informatics</option>
+                  </select>
                 </div>
                 <div class="field">
                   <div class="ui left icon input">
