Add other option

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,7 +20,6 @@
                 </div>
                 <div class="field">
                   <select class="ui dropdown">
-                    <option value="">Your major</option>
                     <option value="CS">Computer Science</option>
                     <option value="CSE">Computer Science & Engineering</option>
                     <option value="CE">Computer Engineering</option>
@@ -28,6 +27,7 @@
                     <option value="SE">Software Engineering</option>
                     <option value="CGS">Computer Game Science</option>
                     <option value="INF">Informatics</option>
+                    <option value="OTH">Other</option>
                   </select>
                 </div>
                 <div class="field">
