Make courses and students stackable

--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -2,7 +2,7 @@
 <div class="ui container">
     <h1 class="ui header">Enrolled Students</h1>
     <hr>
-    <div id="student-index" class="ui four doubling cards">
+    <div id="student-index" class="ui four stackable cards">
         <% if (students.length > 0) { %>
             <% students.forEach((student) => { %>
                 <div class="card">
