--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -2,7 +2,7 @@
 <div class="ui container">
     <h1 class="ui header">All Courses</h1>
     <hr>
-    <div id="courses-index" class="ui four stackable cards">
+    <div id="course-index" class="ui four stackable cards">
         <% if (courses.length > 0) { %>
             <% courses.forEach((course) => { %>
                 <div class="ui card">
