--- a/views/courses/index.ejs
+++ b/views/courses/index.ejs
@@ -1,7 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">All Courses</h1>
-    <hr>
+    <h1 class="info-header">All Courses</h1>
     <div id="course-index" class="ui four stackable cards">
         <% if (courses.length > 0) { %>
             <% courses.forEach((course) => { %>
