--- a/views/students/show.ejs
+++ b/views/students/show.ejs
@@ -1,8 +1,7 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Student Information</h1>
-    <hr>
-    <div class="ui segment">
+    <h1 class="info-header">Student Information</h1>
+    <div id="show-student" class="ui segment">
         <div class="ui grid stackable">
             <div class="four wide column">
                 <img class="ui rounded image" src="<%=student.img%>">
