--- a/views/assignments/index.ejs
+++ b/views/assignments/index.ejs
@@ -1,7 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header"><%= courseName %> Assignments</h1>
-    <hr>
+    <h1 class="info-header"><%= courseName %> Assignments</h1>
     <table class="ui blue celled table">
         <thead>
             <tr>
