--- a/views/assignments/new.ejs
+++ b/views/assignments/new.ejs
@@ -1,7 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">New Assignment</h1>
-    <hr>
+    <h1 class="info-header">New Assignment</h1>
     <form class="ui form" action="/assignments" method="POST">
         <div class="fields">
           <div class="field">
