--- a/views/courses/show.ejs
+++ b/views/courses/show.ejs
@@ -1,8 +1,7 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">Course Information</h1>
-    <hr>
-    <div class="ui segment">
+    <h1 class="info-header">Course Information</h1>
+    <div id="show-class" class="ui segment">
         <div class="ui grid stackable">
             <div class="twelve wide column">
                 <h2><i class="<%=course.icon%> icon"></i><%= course.name %></h2>
