--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -1,7 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="ui header">New Student</h1>
-    <hr>
+    <h1 class="info-header">New Student</h1>
     <form class="ui form" action="/students" method="POST">
         <div class="fields">
           <div class="field">
