--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,17 @@
 <body>
     <div class="ui stackable inverted menu">
         <div class="ui container">
+            <% if (currentUser) { %>
+            <a href="/"class="item"><i class="tachometer alternate icon"></i>Dashboard</a>
+            <% } else { %>
             <a href="/"class="item"><i class="home icon"></i>Home</a>
+            <% } %>
+
             <% if (currentUser) { %>
             <a href="/courses" class="item"><i class="graduation hat icon"></i>Courses</a>
             <a href="/students" class="item"><i class="address book icon"></i>Directory</a>
             <% } %>
+            
             <div class="right menu">
                 <% if (!currentUser) { %>
                 <a href="/login" class="item"><i class="sign-in icon"></i>Login</a>
