--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
                   <input type="email" name="email" placeholder="Email" required>
                 </div>
                 <div class="field">
-                  <select class="ui dropdown">
+                  <select class="ui dropdown" name="major">
                     <option value="CS">Computer Science</option>
                     <option value="CSE">Computer Science & Engineering</option>
                     <option value="CE">Computer Engineering</option>
