Update dashboard links icon

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="ui segments green segment">
             <div class="ui segment">
-                <h2><i class="question icon"></i> Learnvas Links</h2>
+                <h2><i class="linkify icon"></i> Learnvas Links</h2>
             </div>
             <div class="ui segments">
                 <div class="ui segment">
