--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,9 +3,7 @@
     <div class="ui centered grid">
         <div class="column">
             <h2 class="ui teal image header">
-              <div class="content">
-                Register for an account
-              </div>
+              <div class="content">Register for an account</div>
             </h2>
             <form action="/register" method="post" class="ui large form">
               <div class="ui stacked segment">
@@ -19,16 +17,20 @@
                   <input type="email" name="email" placeholder="Email" required>
                 </div>
                 <div class="field">
-                  <select class="ui dropdown" name="major">
-                    <option value="CS">Computer Science</option>
-                    <option value="CSE">Computer Science & Engineering</option>
-                    <option value="CE">Computer Engineering</option>
-                    <option value="ELE">Electrical Engineering</option>
-                    <option value="SE">Software Engineering</option>
-                    <option value="CGS">Computer Game Science</option>
-                    <option value="INF">Informatics</option>
-                    <option value="OTH">Other</option>
-                  </select>
+                  <div class="ui selection dropdown">
+                    <input type="hidden" name="major">
+                    <i class="dropdown icon"></i>
+                    <div class="default text">Major</div>
+                    <div class="menu">
+                      <div class="item" data-value="CS" data-text="Computer Science">Computer Science</div>
+                      <div class="item" data-value="CSE" data-text="Computer Science & Engineering">Computer Science & Engineering</div>
+                      <div class="item" data-value="CE" data-text="Computer Engineering">Computer Engineering</div>
+                      <div class="item" data-value="ELE" data-text="Electrical Engineering">Electrical Engineering</div>
+                      <div class="item" data-value="SE" data-text="Software Engineering">Software Engineering</div>
+                      <div class="item" data-value="CGS" data-text="Computer Game Science">Computer Game Science</div>
+                      <div class="item" data-value="INF" data-text="Informatics">Informatics</div>
+                    </div>
+                  </div>
                 </div>
                 <div class="field">
                   <div class="ui left icon input">
