Update student directory heading

--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -1,6 +1,6 @@
 <%- include("../partials/header.ejs") %>
 <div class="ui container">
-    <h1 class="info-header">Enrolled Students</h1>
+    <h1 class="info-header">Student Directory</h1>
     <div id="student-index" class="ui four stackable cards">
         <% if (students.length > 0) { %>
             <% students.forEach((student) => { %>
